Ajout des options pour version 'brouillon'

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -1,4 +1,5 @@
 \documentclass[10pt,final,journal,twocolumn]{IEEEtran}
+%\documentclass[10pt,draftclsnofoot,journal,onecolumn]{IEEEtran}
 
 \usepackage[T1]{fontenc}
 
