Anonymisation du papier, suite au passage à 'IEEE Comm. Letters'

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -1,11 +1,12 @@
 \documentclass[10pt,final,journal,twocolumn]{IEEEtran}
-%\documentclass[10pt,draftclsnofoot,journal,onecolumn]{IEEEtran}
+%\documentclass[12pt,draftclsnofoot,journal,onecolumn]{IEEEtran}
 
 \usepackage[T1]{fontenc}
 
 \title{Timing Inaccuracy in MSPSim Emulator: Consequences on COOJA Simulations}
 \author{
-K\'evin~Roussel, Ye-Qiong~Song and Olivier~Zendra%\\
+Author 1, Author 2, Author 3
+%K\'evin~Roussel, Ye-Qiong~Song and Olivier~Zendra%\\
 %LORIA/INRIA Nancy Grand-Est,\\
 %Universit\'e de Lorraine,\\
 %615, rue du Jardin Botanique,\\
