Abandon de l'anonymat, et passage à une taille de texte supérieure (11 pt.)

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -1,17 +1,16 @@
-\documentclass[10pt,final,journal,twocolumn]{IEEEtran}
+\documentclass[11pt,final,journal,twocolumn]{IEEEtran}
 %\documentclass[12pt,draftclsnofoot,journal,onecolumn]{IEEEtran}
 
 \usepackage[T1]{fontenc}
 
 \title{Timing Inaccuracy in MSPSim Emulator: Consequences on COOJA Simulations}
 \author{
-Author 1, Author 2, Author 3
-%K\'evin~Roussel, Ye-Qiong~Song and Olivier~Zendra%\\
-%LORIA/INRIA Nancy Grand-Est,\\
-%Universit\'e de Lorraine,\\
-%615, rue du Jardin Botanique,\\
-%54600 Villers-l\`es-Nancy, France\\
-%\texttt{\{Kevin.Roussel,Ye-Qiong.Song,Olivier.Zendra\}@inria.fr}
+K\'evin~Roussel, Ye-Qiong~Song and Olivier~Zendra\\
+LORIA/INRIA Nancy Grand-Est,\\
+Universit\'e de Lorraine,\\
+615, rue du Jardin Botanique,\\
+54600 Villers-l\`es-Nancy, France\\
+\texttt{\{Kevin.Roussel,Ye-Qiong.Song,Olivier.Zendra\}@inria.fr}
 }
 \date{}
 
@@ -463,7 +462,7 @@ To help in that matter, we freely provide the programs we used to perform the
 present work at the following URL.
 
 \begin{center}
-\texttt{\small https://github.com/rousselk/tim-inacc-tst-prg}
+\texttt{\footnotesize https://github.com/rousselk/tim-inacc-tst-prg}
 \end{center}
 
 
@@ -568,7 +567,6 @@ more easily thanks to its emulation features.
 
 %\vfill
 \bibliographystyle{IEEEtran}
-{\small
-\bibliography{TimingInacc}}
+\bibliography{TimingInacc}
 
 \end{document}
