Ajout de 'thoroughly' au paragraphe sur la calibration

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -359,7 +359,7 @@ overestimates largely the SPI delays, while the emulation of the MSP430F1611
 
 We can suppose that the MSPSim software has probably been finely tuned for
 MSP430F1611 emulation~--- especially for timing calibrations~---, while
-MSP430F2617 emulation has been less tested.
+MSP430F2617 emulation has been less thoroughly tested.
 
 \medskip
 
