--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -3,7 +3,8 @@
   AUTHOR =      {A. Dunkels and B. Gr\"onvall and T. Voigt},
   TITLE =      {{Contiki -- a Lightweight and Flexible Operating System
                  for Tiny Networked Sensors}},
-  BOOKTITLE =   {LCN '04},
+  BOOKTITLE =   {IEEE 29th Conference on Local Computer Networks},
+  SERIES =      {LCN '04},
   PAGES =       {455--462},
   YEAR =        {2004},
   PUBLISHER =   {IEEE Computer Society},
@@ -14,7 +15,8 @@
   AUTHOR =      {F. \"Osterlind and A. Dunkels and J. Eriksson and N. Finne
                  and T. Voigt},
   TITLE =      {{Cross-Level Sensor Network Simulation with Cooja}},
-  BOOKTITLE =   {LCN '06},
+  BOOKTITLE =   {IEEE 31st Conference on Local Computer Networks},
+  SERIES =      {LCN '06},
   PAGES =       {641--648},
   YEAR =        {2006},
   PUBLISHER =   {IEEE Computer Society}
@@ -25,10 +27,25 @@
                  and A. Dunkels and T. Voigt and R. Sauter and J.P. Marr\'on},
   TITLE =      {{COOJA/MSPSim: Interoperability Testing for Wireless
                  Sensor Networks}},
-  BOOKTITLE =   {Simutools '09},
+  BOOKTITLE =   {Proceedings of the 2nd International Conference on
+                 Simulation Tools and Techniques},
+  SERIES =      {Simutools '09},
   PAGES =       {27:1--27:7},
   YEAR =        {2009},
   PUBLISHER =   {ICST}
+}
+
+@INPROCEEDINGS{Avrora,
+  AUTHOR =      {B. L. Titzer and D.K. Lee and J. Palsberg},
+  TITLE =      {{Avrora: Scalable Sensor Network Simulation with
+                 Precise Timing}},
+  BOOKTITLE =   {Proceedings of the 4th International Symposium on
+                 Information Processing in Sensor Networks},
+  SERIES =      {IPSN '05},
+  YEAR =        {2005},
+  ISBN =        {0-7803-9202-7},
+  NOTE =        {Article no. 67},
+  PUBLISHER =   {IEEE Press}
 }
 
 @INPROCEEDINGS{RIOT,
@@ -164,6 +181,4 @@
   YEAR =        {2014},
   ISSN =        {1570-8705},
 }
-
-
 
