Changement de titre (comme discuté avec YQS et OZ)

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -22,7 +22,7 @@
        \email{olivier.zendra@inria.fr}
 }
 
-\title{Timing Inaccuracy in MSPSim Emulator: Consequences on COOJA Simulations}
+\title{Using COOJA for WSN Simulations: Some New Uses and Limits}
 
 % Short paper for the NextMote workshop
 \conferenceinfo{EWSN'16---NextMote Workshop}
